@@ -21,30 +21,25 @@ import org.rulii.annotation.Description;
 import org.rulii.annotation.Rule;
 import org.rulii.context.RuleContext;
 import org.rulii.util.NumberComparator;
-import org.rulii.validation.BindingSupplier;
-import org.rulii.validation.BindingValidationRule;
-import org.rulii.validation.RuleViolationBuilder;
-import org.rulii.validation.Severity;
-import org.rulii.validation.ValidationRuleException;
+import org.rulii.validation.*;
 
-import java.math.BigDecimal;
-import java.util.Arrays;
 import java.util.List;
 
 /**
- * Validation Rule to make sure the the value is less the desired Max.
+ * Validation Rule to make sure the value is less the desired Max.
  *
  * @author Max Arulananthan
  * @since 1.0
+ *
  */
 @Rule
 @Description("Value is less than the desired Max.")
 public class MaxValidationRule extends BindingValidationRule {
 
-    public static List<Class<?>> SUPPORTED_TYPES    = Arrays.asList(Number.class, CharSequence.class);
+    public static List<Class<?>> SUPPORTED_TYPES    = List.of(Number.class, CharSequence.class);
 
-    public static final String ERROR_CODE       = "rulii.validation.rules.MaxValidationRule.errorCode";
-    public static final String DEFAULT_MESSAGE  = "Value must be less than or equal to {1}. Given {0}.";
+    public static final String ERROR_CODE       = "maxValidationRule.errorCode";
+    public static final String DEFAULT_MESSAGE  = "Value {0} must not be less than or equal to {1}.";
 
     private final long max;
 
@@ -73,7 +68,7 @@ public class MaxValidationRule extends BindingValidationRule {
         if (value instanceof Number) number = (Number) value;
         if (value instanceof CharSequence) {
             try {
-                number = new BigDecimal(value.toString());
+                number = Long.valueOf(value.toString());
             } catch (NumberFormatException e) {
                 return false;
             }
@@ -84,7 +79,7 @@ public class MaxValidationRule extends BindingValidationRule {
                     + "Supplied Class [" + value.getClass() + "] value [" + value + "]");
 
         Integer result = NumberComparator.compare(number, max);
-        return result == null ? true : result <= 0;
+        return result == null || result <= 0;
     }
 
     @Override
