@@ -22,13 +22,8 @@ import org.rulii.annotation.Rule;
 import org.rulii.context.RuleContext;
 import org.rulii.lib.apache.validation.RegexValidator;
 import org.rulii.lib.spring.util.Assert;
-import org.rulii.validation.BindingSupplier;
-import org.rulii.validation.BindingValidationRule;
-import org.rulii.validation.RuleViolationBuilder;
-import org.rulii.validation.Severity;
-import org.rulii.validation.ValidationRuleException;
+import org.rulii.validation.*;
 
-import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -36,15 +31,16 @@ import java.util.List;
  *
  * @author Max Arulananthan
  * @since 1.0
+ *
  */
 @Rule
 @Description("Value must match the given regex pattern.")
 public class PatternValidationRule extends BindingValidationRule {
 
-    public static List<Class<?>> SUPPORTED_TYPES    = Arrays.asList(CharSequence.class);
+    public static List<Class<?>> SUPPORTED_TYPES    = List.of(CharSequence.class);
 
-    public static final String ERROR_CODE       = "rulii.validation.rules.PatternValidationRule.errorCode";
-    public static final String DEFAULT_MESSAGE  = "Value must match regex pattern {1}. Given {0}.";
+    public static final String ERROR_CODE       = "patternValidationRule.errorCode";
+    public static final String DEFAULT_MESSAGE  = "Value {0} must match the required regex pattern {1}.";
 
     private final String pattern;
     private final boolean caseSensitive;
